Fixed bug where form logo was too big

--- a/sensors/static/style.css
+++ b/sensors/static/style.css
@@ -216,11 +216,15 @@ form {
 	border-radius: 25px;
 	box-shadow: 0px 0px 20px 0px rgba(0, 0, 0, 0.1);
 	background-color: rgba(255, 255, 255, 0.0);
-	padding:10px;
 	padding-left:30px;
 	padding-right:30px;
 	display:inline-block;
 	padding-bottom:30px;
+}
+
+#form_logo {
+	margin-top:0px;
+	width:100px;
 }
 
 li {
